[gd_scene load_steps=4 format=3 uid="uid://b78qa14tyuwrp"]

[ext_resource type="Theme" uid="uid://bve6wpx2nymig" path="res://themes/size40font.tres" id="1_ixoqv"]
[ext_resource type="Script" path="res://scripts/ui/crafting_menu.gd" id="2_caf5t"]
[ext_resource type="PackedScene" uid="uid://k5ccyi071s5r" path="res://scenes/crafting_game.tscn" id="3_yxssk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ixoqv")
script = ExtResource("2_caf5t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.189964, 0.493923, 0.766675, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="ColorRect/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 900)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="NameLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lvl "

[node name="ExpLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Exp"

[node name="IngredientDisplay" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.419608)
layout_mode = 2
text = "Press C to Craft"
horizontal_alignment = 1

[node name="CraftingGame" parent="." instance=ExtResource("3_yxssk")]
visible = false
layout_mode = 1
